server_output.log
/home/pricepro2006/CrewAI_Team/src/core/agents/base/AgentTypes.ts:2
import { Document } from '../../shared/types';
         ^

SyntaxError: The requested module '../../shared/types' does not provide an export named 'Document'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:182:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:266:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:644:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:116:5)

Node.js v22.15.0
